syntax = "proto3";
option csharp_namespace = "OrderGrpc";

service OrderService {
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}

message GetOrderRequest {
  int32 id = 1;
}

message GetOrderResponse {
  int32 id = 1;
  int32 productId = 2;
  int32 quantity = 3;
  double totalPrice = 4;
  string status = 5;
  string orderDate = 6;
}

message PlaceOrderRequest {
  int32 productId = 1;
  int32 quantity = 2;
  double totalPrice = 3;
}

message PlaceOrderResponse {
  int32 orderId = 1;
  string status = 2;
}

message UpdateOrderStatusRequest {
  int32 orderId = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  bool success = 1;
}


message ListOrdersRequest {
  string status = 1;       // optional filter, e.g. "Completed"
  int64 fromTimestamp = 2; // optional date filter (Unix epoch ms)
  int64 toTimestamp = 3;   // optional date filter
  string sortBy = 4;       // e.g. "date_desc", "price_asc"
  int32 page = 5;
  int32 pageSize = 6;
}

message OrderSummary {
  int32 id = 1;
  int32 productId = 2;
  int32 quantity = 3;
  double totalPrice = 4;
  string status = 5;
  string orderDate = 6; // ISO8601 string
}

message ListOrdersResponse {
  repeated OrderSummary orders = 1;
  int32 totalOrders = 2;
}
